--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -2,12 +2,16 @@
 header {
   background-image: url('../images/header.jpg');
   background-size: cover;
+  background-position: center;
   max-width: 100%;
-  height: 32em;
+  height: 25em;
   border-bottom: 2px solid $main-color;
   @include flexy(flex, column, null, center);
   & h1 {
     text-align: center;
+  }
+  @include mq(medium) {
+    height: 32em;
   }
 }
 
