--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -118,7 +118,7 @@ $letter-space    : 1px;
 
 
 $brkpoint-sm: 320px;
-$brkpoint-med: 768px;
+$brkpoint-med: 750px;
 $brkpoint-lg: 1024px;
 
 //============
